--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.0.7
   http: ^1.1.0
   font_awesome_flutter: ^10.8.0
+  logger: ^2.0.0
 
 dev_dependencies:
   flutter_test:
