--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,16 +5,13 @@ name: Deploy to Firebase Hosting on merge
 on:
   push:
     branches:
-      - main
+      - y
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: |
-          npm install -g firebase-tools
-          flutter build web
-          firebase deploy --only hosting --project saeedkhanportfolio
+      - run: y
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
